# rmbrr

./: .gitignore  .npmignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  install.ps1  install.sh  package.json  rmbrr.rb
.github/workflows/: ci.yml  release.yml
bench/: benchmark.ps1  benchmark.sh  package.json
scripts/: install.js
src/: broker.rs  error.rs  lib.rs  main.rs  safety.rs  tree.rs  winapi.rs  worker.rs
tests/: edge_cases.rs  integration_tests.rs
