[package]
name = "win-rmdir-fast"
version = "0.1.0"
edition = "2021"
authors = ["win-rmdir-fast contributors"]
description = "Hyper-optimized Windows directory deletion tool"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
